# post-graduate

./: .gitignore  README.md  pyproject.toml  scrapy.cfg
graduate_info/: items.py  settings.py
graduate_info/exporters/: utf8_json_item_exporter.py
graduate_info/middlewares/: proxy_middleware.py
graduate_info/pipelines/: pipelines.py  school_pipeline.py
graduate_info/proxies/: ip_proxy.py  jl_ip_proxy.py
graduate_info/spiders/: school_crawler.py  software_engineer_crawler.py
sql/: init.sql
